# GM_Labs

GM_Lab1/: CMakeLists.txt
GM_Lab1/src/: main.cpp
GM_Lab2/: CMakeLists.txt
GM_Lab2/include/: Examples.h
GM_Lab2/src/: AppWindow.cpp  Texture.cpp  main.cpp
GM_Lab3/: CMakeLists.txt
GM_Lab3/include/: Examples.h  Functions.h  MImageCalculator.h  Texture.h
GM_Lab3/src/: MImageCalculator.cpp  Texture.cpp  main.cpp
